fix: added theme and header and favicon

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       "@shared/*": [
         "./shared/*"
       ],
+      "@components/*": [
+        "./components/*"
+      ],
+      "@src/*": [
+        "./*"
+      ]
     }
   },
   "include": [
