--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@mui/material": "5.8.6",
     "date-fns": "2.28.0",
     "date-fns-tz": "1.3.5",
+    "effector": "^22.3.0",
+    "effector-next": "^1.3.3",
+    "effector-react": "^22.0.6",
     "graphql": "16.5.0",
     "next": "12.2.0",
     "next-sitemap": "3.1.8",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
