--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@keystone-6/fields-document": "4.0.0",
         "@mui/icons-material": "5.8.4",
         "@mui/material": "5.8.7",
+        "@mui/x-date-pickers": "^5.0.0-beta.0",
         "date-fns": "2.28.0",
         "date-fns-tz": "1.3.5",
         "effector": "22.3.0",
