--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.33.1",
         "react-hook-form-mui": "^4.1.0",
-        "sharp": "^0.30.7"
+        "react-slick": "^0.29.0",
+        "sharp": "^0.30.7",
+        "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
         "@types/node": "18.0.0",
         "@types/react": "18.0.15",
         "@types/react-dom": "18.0.6",
+        "@types/react-slick": "^0.23.10",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
         "eslint": "8.19.0",
