--- a/package.json
+++ b/package.json
@@ -1,47 +1,61 @@
 {
-  "name": "nextjs-with-typescript",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "TZ='UTC' next dev",
-    "build": "next build && npm run postbuild",
-    "postbuild": "next-sitemap --config=next-sitemap.config.js",
-    "start": "next start -p 3000",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@apollo/client": "3.6.9",
-    "@emotion/cache": "11.9.3",
-    "@emotion/react": "11.9.3",
-    "@emotion/server": "11.4.0",
-    "@emotion/styled": "11.9.3",
-    "@keystone-6/fields-document": "4.0.0",
-    "@mui/icons-material": "5.8.4",
-    "@mui/material": "5.8.7",
-    "date-fns": "2.28.0",
-    "date-fns-tz": "1.3.5",
-    "effector": "22.3.0",
-    "effector-next": "1.3.3",
-    "effector-react": "22.0.6",
-    "graphql": "16.5.0",
-    "next": "12.2.1",
-    "next-sitemap": "3.1.10",
-    "nextjs-progressbar": "0.0.14",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.1",
-    "typescript": "4.7.4"
-  },
-  "eslintConfig": {
-    "extends": "eslint-config-next"
-  },
-  "engines": {
-    "node": "16.x"
-  }
+    "name": "nextjs-with-typescript",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build && yarn run postbuild",
+        "postbuild": "next-sitemap --config=next-sitemap.config.js",
+        "start": "next start -p 3000",
+        "lint": "next lint",
+        "eslint": "eslint --fix .",
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    },
+    "dependencies": {
+        "@apollo/client": "3.6.9",
+        "@emotion/cache": "11.9.3",
+        "@emotion/react": "11.9.3",
+        "@emotion/server": "11.4.0",
+        "@emotion/styled": "11.9.3",
+        "@keystone-6/fields-document": "4.0.0",
+        "@mui/icons-material": "5.8.4",
+        "@mui/material": "5.8.7",
+        "@mui/x-date-pickers": "^5.0.0-beta.0",
+        "date-fns": "2.28.0",
+        "date-fns-tz": "1.3.5",
+        "effector": "22.3.0",
+        "effector-next": "1.3.3",
+        "effector-react": "22.0.6",
+        "graphql": "16.5.0",
+        "next": "12.2.1",
+        "next-sitemap": "3.1.10",
+        "nextjs-progressbar": "0.0.14",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.33.1",
+        "react-hook-form-mui": "^4.1.0",
+        "react-slick": "^0.29.0",
+        "sharp": "^0.30.7",
+        "slick-carousel": "^1.8.1"
+    },
+    "devDependencies": {
+        "@types/node": "18.0.0",
+        "@types/react": "18.0.15",
+        "@types/react-dom": "18.0.6",
+        "@types/react-slick": "^0.23.10",
+        "@typescript-eslint/eslint-plugin": "^5.30.5",
+        "@typescript-eslint/parser": "^5.30.5",
+        "eslint": "8.19.0",
+        "eslint-config-next": "12.2.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-jsx-a11y": "^6.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "prettier": "^2.7.1",
+        "typescript": "4.7.4"
+    },
+    "engines": {
+        "node": "16.x"
+    }
 }
