--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start": "next start -p 3000",
         "lint": "next lint",
         "eslint": "eslint --fix .",
-        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+        "generate": "graphql-codegen"
     },
     "dependencies": {
         "@apollo/client": "3.6.9",
@@ -26,7 +27,7 @@
         "effector": "22.3.0",
         "effector-next": "1.3.3",
         "effector-react": "22.0.6",
-        "graphql": "16.5.0",
+        "graphql": "^16.5.0",
         "next": "12.2.2",
         "next-sitemap": "3.1.10",
         "nextjs-progressbar": "0.0.14",
@@ -39,6 +40,10 @@
         "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
+        "@graphql-codegen/add": "^3.2.0",
+        "@graphql-codegen/cli": "^2.8.0",
+        "@graphql-codegen/schema-ast": "^2.5.0",
+        "@graphql-codegen/typescript": "^2.7.1",
         "@types/node": "18.0.0",
         "@types/react": "18.0.15",
         "@types/react-dom": "18.0.6",
