--- a/codegen.yml
+++ b/codegen.yml
@@ -1,7 +1,7 @@
 overwrite: true
 schema: http://localhost:8000/api/graphql
 generates:
-  ./src/lib/apollo/schema.graphql:
+  ./schema.graphql:
     plugins:
       - schema-ast
   ./src/lib/apollo/types.ts:
