--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "next dev",
         "build": "next build && yarn run postbuild",
         "postbuild": "next-sitemap --config=next-sitemap.config.js",
-        "start": "next start -p 3000",
+        "start": "next start",
         "lint": "next lint",
         "eslint": "eslint --fix .",
         "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
