feat: added new advantages

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@apollo/client": "3.6.9",
+        "@egjs/react-flicking": "^4.9.0",
         "@emotion/cache": "11.9.3",
         "@emotion/react": "11.9.3",
         "@emotion/server": "11.4.0",
