--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     },
     "dependencies": {
         "@apollo/client": "3.6.9",
+        "@egjs/react-flicking": "^4.9.0",
         "@emotion/cache": "11.9.3",
         "@emotion/react": "11.9.3",
         "@emotion/server": "11.4.0",
         "@emotion/styled": "11.9.3",
         "@keystone-6/fields-document": "4.0.0",
         "@mui/icons-material": "5.8.4",
+        "@mui/lab": "^5.0.0-alpha.90",
         "@mui/material": "5.9.0",
         "@mui/x-date-pickers": "^5.0.0-beta.0",
         "date-fns": "2.28.0",
