--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-hook-form": "^7.33.1",
         "react-hook-form-mui": "5.1.0",
         "react-slick": "^0.29.0",
+        "sass": "^1.53.0",
         "sharp": "^0.30.7",
         "slick-carousel": "^1.8.1"
     },
