--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,3 @@
 FRONTEND_URL="http://localhost:3000"
 
-#BACKEND_URL=https://juststudycrm.herokuapp.com
-#BACKEND_URL="http://localhost:8000"
+BACKEND_URL=https://api.juststudy.online
