--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-dom": "18.2.0",
         "react-hook-form": "7.33.1",
         "react-hook-form-mui": "5.1.0",
+        "react-phone-input-2": "^2.15.1",
         "react-slick": "0.29.0",
         "sass": "1.53.0",
         "sharp": "0.30.7",
