--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@mui/lab": "5.0.0-alpha.90",
         "@mui/material": "5.9.0",
         "@mui/x-date-pickers": "5.0.0-beta.0",
+        "@sentry/cli": "^2.5.0",
         "@sentry/nextjs": "^7.7.0",
         "date-fns": "2.28.0",
         "date-fns-tz": "1.3.6",
