--- a/sentry.properties
+++ b/sentry.properties
@@ -1,4 +1,4 @@
 defaults.url=https://sentry.io/
 defaults.org=just-study
-defaults.project=javascript-nextjs
+defaults.project=front
 cli.executable=../../.npm/_npx/a8388072043b4cbc/node_modules/@sentry/cli/bin/sentry-cli
