--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "graphql": "16.5.0",
         "next": "12.2.3",
         "next-compose-plugins": "2.2.1",
+        "next-pwa": "^5.5.4",
         "next-sitemap": "3.1.13",
         "nextjs-progressbar": "0.0.14",
         "react": "18.2.0",
